fix: Text alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,10 @@ h1, h2, h3, h4 {
   color: var(--atom-p-pink-500);
 }
 
+.text-align-center {
+  text-align: center;
+}
+
 .form-page {
   min-height: 400px;
   display: flex;
